--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,7 +11,7 @@
   --hover-active-colour: #F2C7E2;
   --svg-fill-colour: #fff;
   --sorce-code-svg-fill-colour: hsl(214, 7%, 47%);
-  --body-bg-colour: #121212;
+  --body-bg-colour: #0D1117;
   --nav-footer-bg-colour: #131418;
   --nav-text-colour: #f2f5f7;
   --card-bg-colour: #262626;
@@ -26,6 +26,14 @@
 body {
   overflow-x: hidden;
   background-color: var(--body-bg-colour);
+}
+
+.changelog_body {
+  overflow-x: hidden;
+  background-color: var(--body-bg-colour);
+  max-width: 1500px;
+  margin-left: 15em;
+  margin-right: 15em;
 }
 
 a {
@@ -273,7 +281,7 @@ svg {
   padding-top: 1em;
   margin: auto;
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.25em;
   color: var(--nav-text-colour);
 }
 @media screen and (max-width: 800px) {
@@ -285,15 +293,12 @@ svg {
   }
 }
 
-.card_display {
-  display: flex;
-}
-
 hr {
-  border-top: 2px solid var(--top-border-colour);
-  width: 96%;
+  border-top: 1px solid var(--top-border-colour);
+  width: 97%;
   margin-left: 1em;
   margin-top: 0.3em;
+  margin: auto;
   align-items: center;
 }
 
