--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,6 +32,7 @@ body{
     margin-left: 15em;
     margin-right: 15em;
     @media screen and (max-width: 800px){
+      max-width: 1000px;
         margin-left: 0;
         margin-right: 0;
     }
