--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,8 @@ body {
 }
 @media screen and (max-width: 800px) {
   .changelog_body {
-    max-width: 1000px;
+    max-width: 800px;
+    overflow-x: hidden;
     margin-left: 0;
     margin-right: 0;
   }
