--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,7 +32,8 @@ body{
     margin-left: 15em;
     margin-right: 15em;
     @media screen and (max-width: 800px){
-      max-width: 1000px;
+      max-width: 800px;
+      overflow-x: hidden;
         margin-left: 0;
         margin-right: 0;
     }
