--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,7 +41,8 @@ body{
 a{
   color: var(--nav-text-colour);
   @media screen and (max-width: 800px){
-    margin-right: 1em;
+    margin-right: 5em;
+    overflow-x: hidden;
   }
   &:hover{
     color: var(--hover-active-colour);
