--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,7 +49,8 @@ a {
 }
 @media screen and (max-width: 800px) {
   a {
-    margin-right: 1em;
+    margin-right: 5em;
+    overflow-x: hidden;
   }
 }
 a:hover {
