--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -320,3 +320,21 @@ hr {
     border: .2px solid #171d29;
     margin-top: .5em;
   }
+
+.removed{
+color: rgb(255, 181, 181);
+}
+.added{
+color: rgb(181, 255, 181);
+}
+.fixed{
+color: rgb(255, 235, 181);
+
+}
+.changed{
+color: rgb(181, 240, 255);
+}
+.issues{
+color: rgb(255, 181, 233);
+}
+
