--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,6 +36,54 @@ body {
   margin-left: 15em;
   margin-right: 15em;
 }
+@media screen and (max-width: 1500px) {
+  .changelog_body {
+    max-width: 1500px;
+    overflow-x: hidden;
+    margin-left: 10em;
+    margin-right: 10em;
+  }
+}
+@media screen and (max-width: 1400px) {
+  .changelog_body {
+    max-width: 1400px;
+    overflow-x: hidden;
+    margin-left: 8em;
+    margin-right: 8em;
+  }
+}
+@media screen and (max-width: 1300px) {
+  .changelog_body {
+    max-width: 1300px;
+    overflow-x: hidden;
+    margin-left: 6em;
+    margin-right: 6em;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .changelog_body {
+    max-width: 1200px;
+    overflow-x: hidden;
+    margin-left: 4em;
+    margin-right: 4em;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .changelog_body {
+    max-width: 1100px;
+    overflow-x: hidden;
+    margin-left: 2em;
+    margin-right: 2em;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .changelog_body {
+    max-width: 1000px;
+    overflow-x: hidden;
+    margin-left: 2em;
+    margin-right: 0;
+  }
+}
 @media screen and (max-width: 800px) {
   .changelog_body {
     max-width: 800px;
@@ -294,7 +342,7 @@ svg {
   font-size: 1.25em;
   color: var(--nav-text-colour);
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   .changelog_h1 {
     padding-top: 1em;
     font-size: 1.25em;
@@ -309,8 +357,12 @@ hr {
   margin-left: 1em;
   margin-top: 0.6em;
   align-items: center;
+  /* @media screen and (max-width: 1428px){
+      width: 120%;
+  margin-left: -8em;
+    } */
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   hr {
     width: 90%;
   }
@@ -366,10 +418,14 @@ hr.test {
   color: rgb(255, 235, 181);
 }
 
-.changed {
-  color: rgb(181, 240, 255);
+.amended {
+  color: rgb(229, 255, 181);
 }
 
 .issues {
   color: rgb(255, 181, 233);
+}
+
+.renamed {
+  color: rgb(209, 181, 255);
 }/*# sourceMappingURL=main.css.map */
