--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,7 +32,43 @@ body{
     max-width: 1500px;
     margin-left: 15em;
     margin-right: 15em;
-    @media screen and (max-width: 800px){
+@media screen and (max-width: 1500px){
+      max-width: 1500px;
+      overflow-x: hidden;
+        margin-left: 10em;
+        margin-right: 10em;
+    }
+@media screen and (max-width: 1400px){
+      max-width: 1400px;
+      overflow-x: hidden;
+        margin-left: 8em;
+        margin-right: 8em;
+    }
+@media screen and (max-width: 1300px){
+      max-width: 1300px;
+      overflow-x: hidden;
+        margin-left: 6em;
+        margin-right: 6em;
+    }
+@media screen and (max-width: 1200px){
+      max-width: 1200px;
+      overflow-x: hidden;
+        margin-left: 4em;
+        margin-right: 4em;
+    }
+@media screen and (max-width: 1100px){
+      max-width: 1100px;
+      overflow-x: hidden;
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+    @media screen and (max-width: 1000px){
+      max-width: 1000px;
+      overflow-x: hidden;
+        margin-left: 2em;
+        margin-right: 0;
+    }
+@media screen and (max-width: 800px){
       max-width: 800px;
       overflow-x: hidden;
         margin-left: 0;
@@ -270,7 +306,7 @@ a{
     text-align: center;
     font-size: 1.25em;
     color: var(--nav-text-colour);
-    @media screen and (max-width: 800px){
+    @media screen and (max-width: 1000px){
       padding-top: 1em;
       font-size: 1.25em;
       padding-left: 2em;
@@ -285,7 +321,11 @@ hr {
   margin-left: 1em;
   margin-top: .6em;
   align-items: center;
-  @media screen and (max-width: 800px){
+  /* @media screen and (max-width: 1428px){
+    width: 120%;
+margin-left: -8em;
+  } */
+  @media screen and (max-width: 1000px){
     width: 90%;
   }
   }
@@ -321,6 +361,7 @@ hr {
     margin-top: .5em;
   }
 
+
 .removed{
 color: rgb(255, 181, 181);
 }
@@ -331,10 +372,13 @@ color: rgb(181, 255, 181);
 color: rgb(255, 235, 181);
 
 }
-.changed{
-color: rgb(181, 240, 255);
+.amended{
+color: rgb(229, 255, 181);
 }
 .issues{
 color: rgb(255, 181, 233);
+}
+.renamed{
+color: rgb(209, 181, 255);
 }
 
