--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -21,6 +21,9 @@
 .renamed {
   color: rgb(209, 181, 255);
 }
+.a_link{
+color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.6em;
+}
 body {
             background-color: #121212;
             color: #ffffff;
