new date desing and new link to each changelog on sidebar

--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -22,8 +22,11 @@
   color: rgb(209, 181, 255);
 }
 .a_link{
-color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 0.6em;
+color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 1em;
 }
+.version_date{ 
+color: rgba(255, 255, 255, 0.804);
+font-size: 1em}
 body {
             background-color: #121212;
             color: #ffffff;
