--- a/assets/css/main-new.css
+++ b/assets/css/main-new.css
@@ -25,7 +25,12 @@
 .a_link {
   color: rgba(184, 181, 181, 0.557);
   text-decoration: none;
-  font-size: 0.6em;
+  font-size: 1em;
+}
+
+.version_date {
+  color: rgba(255, 255, 255, 0.804);
+  font-size: 1em;
 }
 
 body {
