--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -21,163 +21,167 @@
 .renamed {
   color: rgb(209, 181, 255);
 }
-.a_link{
-color: rgba(184, 181, 181, 0.557); text-decoration: none; font-size: 1em;
+.a_link {
+  color: rgba(184, 181, 181, 0.557);
+  text-decoration: none;
+  font-size: 1em;
 }
-.version_date{ 
-color: rgba(255, 255, 255, 0.804);
-font-size: 1em}
+.version_date {
+  color: rgba(255, 255, 255, 0.804);
+  font-size: 1em;
+}
 body {
-            background-color: #121212;
-            color: #ffffff;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            flex-direction: column;
-        }
+  background-color: #121212;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  flex-direction: column;
+}
 h1 {
-            color: #ffffff;
-padding: 0;
-        }
+  color: #ffffff;
+  padding: 0;
+}
 
-
-        h1 {
-            color: #ffffff;
-padding-top: 0;
-padding-bottom: 0;
-margin-bottom: -.3%;
-        }
+h1 {
+  color: #ffffff;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-bottom: -0.3%;
+}
 p {
-            color: #ffffff;
-        }
-        .changelog {
-            margin-top: 20px;
-            width: 100%;
-            max-width: 600px;
-        }
+  color: #ffffff;
+}
+.changelog {
+  margin-top: 20px;
+  width: 100%;
+  max-width: 600px;
+}
 
 hr {
-            color:rgba(138, 84, 139, 0.5215686275);
-        }
-        .version {
-            margin-bottom: 20px;
-        }
-        .version h2 {
-            color: #ffc9ff;
-        }
-        .version ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        .version ul li {
-            padding: 10px;
-            border-radius: 5px;
-            margin-right: 50px 0;
-            margin-right: 50px 0;
-        }
-a {
-            color: #ffffff;
-padding: 0;
-        }
-.accordion {
-        background-color: #333;
-        color: #ffffff;
-        cursor: pointer;
-        padding: 10px;
-        width: 100%;
-        border: none;
-        text-align: left;
-        outline: none;
-        font-size: 15px;
-        transition: 0.4s;
-    }
-
-    .active, .accordion:hover {
-        background-color: #575757;
-    }
-
-    .panel {
-        padding: 0 18px;
-        display: none;
-        background-color: #1f1f1f;
-        overflow: hidden;
-    }
- .sidebar ul {
-        list-style-type: none;
-        padding: 0;
-        text-align: center; /* Center the links */
-    }
-    .sidebar ul li {
-        padding: 10px;
-    }
-    .sidebar ul li a {
-        color: #ffffff;
-        text-decoration: none;
-        display: block;
-padding: .5em;
-    }
-    .sidebar ul li a:hover {
-        background-color: #575757;
-padding: .5em;
-    }
- .sidebar {
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 200px;
-        height: 100%;
-        background-color: #333;
-        padding-top: 20px;
-        transition: transform 0.3s ease;
-        transform: translateX(0);
-    }
-@media screen and (max-width: 600px) {
-        .sidebar {
-           display: none;
-margin: 0;
-        }
-    
+  color: rgba(138, 84, 139, 0.5215686275);
 }
-    .sidebar-icon {
-        position: absolute;
-        left: 200px;
-        font-size: 30px;
-        cursor: pointer;
-        color: #ffffff;
-    }
-    #sidebar-toggle {
-        display: none;
-    }
-    #sidebar-toggle:not(:checked) + .sidebar-icon + .sidebar {
-        transform: translateX(-100%);
-    }
-    .sidebar ul {
-        list-style-type: none;
-        padding: 0;
-    }
-    .sidebar ul li {
-        text-align: center;
-    }
-    .sidebar ul li a {
-        color: #ffffff;
-        text-decoration: none;
-        display: block;
-    }
-    .sidebar ul li a:hover {
-        background-color: #575757;
-    }
-    body {
-        margin-left: 200px; /* Adjust this value if needed */
-    }@media screen and (max-width: 600px) {
-        body {
-            margin-left: 1em;
-margin-right: 1em;
-        }
-    }
-    #sidebar-toggle:not(:checked) ~ body {
-        margin-left: 0;
-    }
+.version {
+  margin-bottom: 20px;
+}
+.version h2 {
+  color: #ffc9ff;
+}
+.version ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+.version ul li {
+  padding: 10px;
+  border-radius: 5px;
+  margin-right: 50px 0;
+  margin-right: 50px 0;
+}
+a {
+  color: #ffffff;
+  padding: 0;
+}
+.accordion {
+  background-color: #333;
+  color: #ffffff;
+  cursor: pointer;
+  padding: 10px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active,
+.accordion:hover {
+  background-color: #575757;
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: #1f1f1f;
+  overflow: hidden;
+}
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center; /* Center the links */
+}
+.sidebar ul li {
+  padding: 10px;
+}
+.sidebar ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em;
+}
+.sidebar ul li a:hover {
+  background-color: #575757;
+  padding: 0.5em;
+}
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #333;
+  padding-top: 20px;
+  overflow-y: scroll;
+  transition: transform 0.3s ease;
+  transform: translateX(0);
+}
+@media screen and (max-width: 600px) {
+  .sidebar {
+    display: none;
+    margin: 0;
+  }
+}
+.sidebar-icon {
+  position: absolute;
+  left: 200px;
+  font-size: 30px;
+  cursor: pointer;
+  color: #ffffff;
+}
+#sidebar-toggle {
+  display: none;
+}
+#sidebar-toggle:not(:checked) + .sidebar-icon + .sidebar {
+  transform: translateX(-100%);
+}
+.sidebar ul {
+  list-style-type: none;
+  padding: 0;
+}
+.sidebar ul li {
+  text-align: center;
+}
+.sidebar ul li a {
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+}
+.sidebar ul li a:hover {
+  background-color: #575757;
+}
+body {
+  margin-left: 200px; /* Adjust this value if needed */
+}
+@media screen and (max-width: 600px) {
+  body {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+}
+#sidebar-toggle:not(:checked) ~ body {
+  margin-left: 0;
+}
