--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,30 +98,69 @@ div {
   margin-top: -4em;
   display: block;
 }
+@media screen and (max-width: 800px) {
+  div {
+    margin-left: -10%;
+  }
+}
 
 .div_2 {
   margin-top: -12.5em;
   display: block;
+}
+@media screen and (max-width: 800px) {
+  .div_2 {
+    margin-left: -10%;
+  }
 }
 
 .div_3 {
   margin-top: -4.5em;
   display: block;
 }
+@media screen and (max-width: 800px) {
+  .div_3 {
+    margin-left: -10%;
+  }
+}
 
 .div_4 {
   margin-top: -11.5em;
   display: block;
+}
+@media screen and (max-width: 800px) {
+  .div_4 {
+    margin-left: -10%;
+  }
 }
 
 .div_5 {
   margin-top: -6em;
   display: block;
 }
+@media screen and (max-width: 800px) {
+  .div_5 {
+    margin-left: -10%;
+    margin-top: 1em;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .mobile {
+    display: flex;
+    margin-top: 0.5em;
+    padding-top: 5em;
+  }
+}
 
 .div_6 {
   margin-top: -13em;
   display: block;
+}
+@media screen and (max-width: 800px) {
+  .div_6 {
+    margin-left: -10%;
+  }
 }
 
 .div_7 {
@@ -129,9 +168,19 @@ div {
   margin-bottom: 2.5em;
   display: block;
 }
+@media screen and (max-width: 800px) {
+  .div_7 {
+    margin-left: -10%;
+  }
+}
 
 h2, p {
   margin-left: 30%;
+}
+@media screen and (max-width: 800px) {
+  h2, p {
+    margin-left: 10%;
+  }
 }
 
 h2 {
@@ -201,7 +250,7 @@ ul {
 }
 @media screen and (max-width: 800px) {
   .header_date_a {
-    margin-left: 25%;
+    margin-left: 10%;
   }
 }
 
