--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -26,6 +26,10 @@
   text-decoration: none;
   font-size: 1em;
 }
+.h3_header {
+  color: rgba(184, 181, 181, 0.557);
+  font-size: 1.3em;
+}
 .version_date {
   color: rgba(255, 255, 255, 0.804);
   font-size: 1em;
