--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -26,6 +26,11 @@
   text-decoration: none;
   font-size: 1em;
 }
+.a_link_dev {
+  color: rgba(184, 181, 181, 0.557);
+  text-decoration: none;
+  font-size: 0.75em;
+}
 .h3_header {
   color: rgba(184, 181, 181, 0.557);
   font-size: 1.3em;
@@ -67,7 +72,10 @@ p {
 }
 
 hr {
-  color: rgba(138, 84, 139, 0.5215686275);
+  color: rgb(233, 179, 234);
+}
+.hr_divider {
+  color: rgba(87, 68, 87, 0.598);
 }
 .version {
   margin-bottom: 20px;
