--- a/assets/css/main-new.css
+++ b/assets/css/main-new.css
@@ -31,7 +31,15 @@
 .a_link_dev {
   color: rgba(184, 181, 181, 0.557);
   text-decoration: none;
-  font-size: 0.75em;
+  font-size: 1em;
+}
+
+.a_link_dev:hover {
+  color: #ffc9ff;
+}
+
+.a_link:hover {
+  color: #ffc9ff;
 }
 
 .h3_header {
@@ -81,6 +89,21 @@ p {
 
 hr {
   color: rgb(233, 179, 234);
+}
+
+a {
+  margin-right: 10px;
+  margin-bottom: 1px;
+}
+
+img {
+  max-height: 40px;
+  margin-bottom: -13px;
+}
+
+img:hover {
+  opacity: 0.7;
+  color: #ffc9ff;
 }
 
 .hr_divider {
