--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -29,7 +29,13 @@
 .a_link_dev {
   color: rgba(184, 181, 181, 0.557);
   text-decoration: none;
-  font-size: 0.75em;
+  font-size: 1em;
+}
+.a_link_dev:hover {
+  color: #ffc9ff;
+}
+.a_link:hover {
+  color: #ffc9ff;
 }
 .h3_header {
   color: rgba(184, 181, 181, 0.557);
@@ -73,6 +79,22 @@ p {
 
 hr {
   color: rgb(233, 179, 234);
+}
+
+a {
+  margin-right: 10px; // Adjust the spacing as needed
+  margin-bottom: 1px;
+}
+
+img {
+  max-height: 40px; // Adjust the size as needed
+
+  margin-bottom: -13px;
+}
+
+img:hover {
+  opacity: 0.7;
+  color: #ffc9ff;
 }
 .hr_divider {
   color: rgba(87, 68, 87, 0.598);
