--- a/assets/css/main-new.css
+++ b/assets/css/main-new.css
@@ -101,6 +101,10 @@ img {
   margin-bottom: -13px;
 }
 
+.svg_sidebar {
+  max-height: 30px;
+}
+
 img:hover {
   opacity: 0.7;
   color: #ffc9ff;
@@ -139,7 +143,7 @@ a {
   background-color: #333;
   color: #ffffff;
   cursor: pointer;
-  padding: 10px;
+  padding: 15px;
   width: 100%;
   border: none;
   text-align: left;
@@ -204,7 +208,7 @@ a {
 .sidebar-icon {
   position: absolute;
   left: 200px;
-  font-size: 30px;
+  font-size: 20px;
   cursor: pointer;
   color: #ffffff;
 }
