--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -91,6 +91,9 @@ img {
 
   margin-bottom: -13px;
 }
+.svg_sidebar {
+  max-height: 30px; // Adjust the size as needed
+}
 
 img:hover {
   opacity: 0.7;
