reduced all .svg sizes

--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -87,9 +87,14 @@ a {
 }
 
 img {
-  max-height: 40px; // Adjust the size as needed
+  max-height: 20px; // Adjust the size as needed
 
-  margin-bottom: -13px;
+  margin-bottom: -3px;
+}
+.svg_git {
+  max-height: 20px; // Adjust the size as needed
+
+  margin-bottom: -3px;
 }
 .svg_sidebar {
   max-height: 30px; // Adjust the size as needed
