--- a/assets/css/main-new.css
+++ b/assets/css/main-new.css
@@ -97,8 +97,13 @@ a {
 }
 
 img {
-  max-height: 40px;
-  margin-bottom: -13px;
+  max-height: 20px;
+  margin-bottom: -3px;
+}
+
+.svg_git {
+  max-height: 20px;
+  margin-bottom: -3px;
 }
 
 .svg_sidebar {
