--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -97,7 +97,7 @@ img {
   margin-bottom: -3px;
 }
 .svg_sidebar {
-  max-height: 30px; // Adjust the size as needed
+  max-height: 20px; // Adjust the size as needed;
 }
 
 img:hover {
@@ -134,15 +134,16 @@ a {
   padding: 15px;
   width: 100%;
   border: none;
-  text-align: left;
+  text-align: center;
   outline: none;
-  font-size: 15px;
+  font-size: 0.75em;
   transition: 0.4s;
 }
 
 .active,
 .accordion:hover {
   background-color: #575757;
+  padding: 15px;
 }
 
 .panel {
