--- a/assets/css/main-new.css
+++ b/assets/css/main-new.css
@@ -1,3 +1,9 @@
+* {
+  font-family: "poppins", sans-serif;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
 .removed {
   color: rgb(255, 181, 181);
 }
