--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -1,3 +1,8 @@
+* {
+  font-family: "poppins", sans-serif;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 .removed {
   color: rgb(255, 181, 181);
 }
