--- a/assets/css/main-new.css
+++ b/assets/css/main-new.css
@@ -54,8 +54,8 @@
 }
 
 .version_date {
-  color: rgba(255, 255, 255, 0.804);
-  font-size: 1em;
+  color: rgb(255, 184, 244);
+  font-size: 0.85em;
 }
 
 body {
