--- a/assets/css/main-new.scss
+++ b/assets/css/main-new.scss
@@ -47,8 +47,8 @@
   font-size: 1.3em;
 }
 .version_date {
-  color: rgba(255, 255, 255, 0.804);
-  font-size: 1em;
+  color: rgb(255, 184, 244);
+  font-size: 0.85em;
 }
 body {
   background-color: #121212;
